
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tooltime"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {file = "LICENSE"}
dependencies = [
    "polars>=0.18.4",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
full = [
    "numpy",
    "pandas",
]

[project.urls]
Source = "https://github.com/sslivkoff/tooltime"

[tool.mypy]
files = ["tooltime"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
ignore = ["F403"]

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "mypy>=1.4.1",
]
